Put screens into their own packages

--- a/app/src/main/res/layout/fragment_my_list.xml
+++ b/app/src/main/res/layout/fragment_my_list.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="model"
-            type="com.ldj.databinding.MyListViewModel" />
+            type="com.ldj.databinding.list.MyListViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
