--- a/app/src/main/res/layout/activity_my_frag_activity.xml
+++ b/app/src/main/res/layout/activity_my_frag_activity.xml
@@ -7,5 +7,5 @@
         android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.ldj.databinding.MyFragment"/>
+        android:name="com.ldj.databinding.frag.MyFragment" />
 </androidx.constraintlayout.widget.ConstraintLayout>
