--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="listItem"
-            type="com.ldj.databinding.ListItem" />
+            type="com.ldj.databinding.list.ListItem" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
